[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parking-env"
version = "0.0.8"
description = "An environment for simulated parking lot tasks."
readme = "README.md"
authors = [{ name = "Kexian Shen", email = "shenkexian@gmail.com" }]
license = { text = "MIT" }
dependencies = ["gymnasium", "numpy", "numba", "pygame", "scipy"]
