[metadata]
name=parking-env
version=0.0.3
author=Kexian Shen
author_email=shenkexian@gmail.com
description=An environment for simulated parking lot tasks.
long_description=file:README.md
long_description_content_type=text/markdown
url=https://github.com/kexianshen/parking-env
license=MIT
classifiers=
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: MIT License

[options]
install_requires=
    gymnasium
    numpy
    numba
    pygame
    scipy

[options.entry_points]
gymnasium.envs =
    __root__ = parking_env.__init__:register_env